
syntax="proto3";
package proto;
option go_package = "./pb";


// service ApiService {
//     rpc PlayerGet(PlayerGetRequest) returns (PlayerGetResponse) {
//         option (google.api.http) = {
//             get: "/player/search"
//         };
//     }
// }

message Pagination {
    int32 offset = 1;
    int32 limit = 2;
    int64 total = 3;
}


message ReportGetResponse {
    int32 code = 1;
    bool success = 2;
    Data data = 3;
    message Data {
        repeated Report result = 1;
        Pagination pagination  = 2;
    }
}

message ReportOptionsGetResponse {
    int32 code = 1;
    bool success = 2;
    Data data = 3;
    message Data {
        repeated string questions = 1;
        repeated string categories  = 2;
    }
}

message PlayerGetResponse {
    int32 code = 1;
    bool success = 2;
    Data data = 3;
    message Data {
        Player result = 1;
        string resultStatus = 2;
        // Pagination pagination  = 2;
    }
}

message MatchGetResponse {
    int32 code = 1;
    bool success = 2;
    Data data = 3;
    message Data {
        repeated Match result = 1;
        Pagination pagination  = 2;
    }
}

message LeaderboardGetResponse {
    int32 code = 1;
    bool success = 2;
    Data data = 3;
    message Data {
        repeated LeaderboardPlayer result = 1;
        Pagination pagination  = 2;
    }
}


message Report {
    string reportCategory = 1;
    string reportDetail = 2;
    string reportDate = 3;
    string recordLink = 4;
    string userName = 5;
}

message Player {
    string username = 1;
    string playerName = 2;
    string playerTagline = 3;
    string playerRank = 4;
    string playerStatus = 5;
    int32 wins = 6;
    int32 kills = 7;
    int32 assists = 8;
    float killsPerRound = 9;
    int32 firstBloods = 10;
    int32 aces = 11;
    int32 clutches = 12;
    int32 mostKills = 13;
}

message Match {
    string matchID = 1;
    string matchServer = 2;
    string mapName = 3;
    string modeName = 4;
    string startTime = 5;
    string endTime = 6;
    string recordLink = 7;
}

message LeaderboardPlayer {
    string userName = 1;
	string playerName = 2;
	string playerTagline = 3;
	string playerRank = 4;
	int32 rating = 5;
}


message GetRequest{
    string limit = 1;
    string offset = 2;
    string query = 3;
}

message PostModifyUserReq{
    string username = 1;
    string playername = 2;
    string tagline = 3;
}
